--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,17 @@
         </developer>
     </developers>
 
+    <distributionManagement>
+        <repository>
+            <id>bintray</id>
+            <url>https://api.bintray.com/maven/${bintray.repo}/${bintray.package}</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <bintray.repo>romikk/maven</bintray.repo>
+        <bintray.package>easybus</bintray.package>
     </properties>
 
     <dependencies>
